<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2pt">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt"
            />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt"
            />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt"/>
    </TableLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <EditText
        android:id="@+id/Cod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/codigo" />
    <EditText
        android:id="@+id/Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nombre" />
    <EditText
        android:id="@+id/Apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/apellido" />
    <EditText
        android:id="@+id/Celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/celular" />
    <EditText
        android:id="@+id/Correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/correo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="163dp">

        <TextView
            android:id="@+id/mensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </ScrollView>
    <Button
        android:id="@+id/guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="crearDatos"
        android:text="@string/guardar" />
    <Button
        android:id="@+id/leer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="leerDatos"
        android:text="@string/listar" />
    <EditText
        android:id="@+id/Codigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/borro" />
    <Button
        android:id="@+id/Borrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="borrarDatos"
        android:text="Borrar" />
    <Button
        android:id="@+id/Actualiza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="actualizar"
        android:text="@string/actualiza" />
</LinearLayout>